docs/tests/syntax/bad/testfile-for4-1.cpp
void m() { for(int i = 0; ; ; i++) ; }
